# codestare-msg-compiler

./: .gitignore  .readthedocs.yaml  LICENSE.rst  README.md  options.py  proto_compile.py  pyproject.toml  setup.cfg
docs/source/: conf.py  getting-started.rst  index.rst
docs/source/_static/css/: custom.css
docs/source/api/: codestare.compiletools.rst  codestare.rst  ubii.compiletools.rst  ubii.rst
docs/source/cli/: advanced.rst  cli-usage.rst
docs/source/example_project/: setup.cfg  setup.py
docs/source/example_project/src/proto/general/: error.proto  success.proto
docs/source/example_project/src/proto/services/: reply.proto  request.proto  service.proto
docs/source/example_project/src/proto/services/request/: subscription.proto
docs/source/example_project/src/py/namespace/proto/: __init__.py  additonal_module.py
src/codestare/compiletools/: __init__.py  cmd.py  compile.py  options.py
src/ubii/compiletools/: __init__.py  cmd.py  compile.py  options.py
