[metadata]
name = ubii-msg-compiler
version = 0.0.2-alpha
author = Maximilian Schmidt
author_email = ga97lul@mytum.de
url = https://github.com/saggitar/ubii-msg-compiler.git

[options]
python_requires = >=3.7
py_modules =
    proto_compile
    options

[options.entry_points]
console_scripts =
    compile-proto = proto_compile:cli [cli]
    rewrite-proto = proto_compile:rewrite [cli]

distutils.commands =
    compile_python = proto_compile:UbiiCompilePython
    compile_mypy = proto_compile:UbiiCompileMypy
    compile_betterproto = proto_compile:UbiiCompileBetterproto
    build_py = proto_compile:UbiiBuildPy



[options.extras_require]
mypy = mypy; mypy-protobuf
betterproto = betterproto[compiler]
cli = fire

