[metadata]
name = ubii-msg-compiler
author = Maximilian Schmidt
author_email = ga97lul@mytum.de
url = https://github.com/saggitar/ubii-msg-compiler.git
description = "Distutils / Setuptools package to automatically compile and process protobuf files."
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = protobuf, proto-plus
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
package_dir =
    = src
packages = find_namespace:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    compile-proto = ubii.compiletools.compile:compile_proto [cli]
    rewrite-proto = ubii.compiletools.compile:rewrite_proto [cli]

distutils.commands =
    compile_python = ubii.compiletools.cmd:CompileProtoPython
    compile_mypy = ubii.compiletools.cmd:CompileProtoMypy
    compile_betterproto = ubii.compiletools.cmd:CompileBetterproto
    compile_protoplus = ubii.compiletools.cmd:CompileProtoPlus
    compile_proto = ubii.compiletools.cmd:CompileProto
    rewrite_proto = ubii.compiletools.cmd:RewriteProto
    generate_inits = ubii.compiletools.cmd:GenerateInits
    build_py = ubii.compiletools.cmd:UbiiBuildPy

[options.extras_require]
mypy = mypy; mypy-protobuf
betterproto = betterproto[compiler]
protoplus = codestare-proto-plus
cli = fire

