[metadata]
name = codestare-msg-compiler
author = Maximilian Schmidt
author_email = ga97lul@mytum.de
url = https://github.com/saggitar/codestare-msg-compiler.git
description = "Distutils / Setuptools package to automatically compile and process protobuf files."
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = protobuf, proto-plus
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
package_dir =
    = src
packages = find_namespace:
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    compile-proto = codestare.compiletools.compile:compile_proto [cli]
    rewrite-proto = codestare.compiletools.compile:rewrite_proto [cli]

distutils.commands =
    compile_python = codestare.compiletools.cmd:CompileProtoPython
    compile_mypy = codestare.compiletools.cmd:CompileProtoMypy
    compile_betterproto = codestare.compiletools.cmd:CompileBetterproto
    compile_protoplus = codestare.compiletools.cmd:CompileProtoPlus
    compile_proto = codestare.compiletools.cmd:CompileProto
    rewrite_proto = codestare.compiletools.cmd:RewriteProto
    generate_inits = codestare.compiletools.cmd:GenerateInits
    build_py_proto = codestare.compiletools.cmd:UbiiBuildPy

egg_info.writers =
    proto_package.txt = codestare.compiletools.cmd:write_package

[options.extras_require]
mypy = mypy; mypy-protobuf
betterproto = betterproto[compiler]
protoplus = codestare-proto-plus >= 0.0.3a1.dev6
cli = fire
docs =
    importlib_metadata;python_version<"3.8"
    sphinx==4.2.0
