[metadata]
name = example-project
author = ...
author_email = foo@bar.com
description = "Documentation Example"
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
setup_requires =
    codestare-msg-compiler >= 0.0.4a1dev5
    importlib_metadata;python_version<"3.8"

install_requires =
    proto-plus >= 1.19.0

package_dir =
    = src/py

packages = find_namespace:

[options.packages.find]
where = src/py

# define include directory with .proto files
[build_py_proto]
include_proto = src/proto

# set build directory and enforce python package
# choose your flavor
[compile_proto]
build_lib = src/py
proto_package = namespace.proto.v1
flavor = plus